[package]
name = "staking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.14.7"
borsh="0.9.3"
spl-token = {version = "3.5.0", features = ["no-entrypoint"]}

[dev-dependencies]
solana-program-test = "1.14.7"
solana-sdk = "1.14.7"

[lib]
crate-type = ["cdylib", "lib"]
